# yas-brew

./: CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  EULA.md  Makefile  README.md
assets/: featured.json
icons/: app.icns
qml/: Main.qml  TapsView.qml
qml/core/: Theme.qml  YasAppWindow.qml
qml/core/components/: TerminalView.qml
qml/core/views/: UpdatesView.qml
src/: brewadapter.cpp  brewadapter.h  main.cpp
tests/: CMakeLists.txt  tst_brewadapter.cpp
